--- a/src/MyAbp.EntityFrameworkCore/MyAbp.EntityFrameworkCore.csproj
+++ b/src/MyAbp.EntityFrameworkCore/MyAbp.EntityFrameworkCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
@@ -13,12 +13,16 @@
     <Compile Remove="Migrations\20190111071724_Upgraded_To_Abp_v4_1_0.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.1" />
+
+    <PackageReference Include="pomelo.entityframeworkcore.mysql" Version="2.2.0" />
+
+    <PackageReference Include="pomelo.entityframeworkcore.mysql.design" Version="1.1.2" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyAbp.Core\MyAbp.Core.csproj" />
