--- a/src/MyAbp.Web.Host/MyAbp.Web.Host.csproj
+++ b/src/MyAbp.Web.Host/MyAbp.Web.Host.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\MyAbp.Web.Core\MyAbp.Web.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
