--- a/src/MyAbp.Web.Host/appsettings.json
+++ b/src/MyAbp.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=MyAbpDb; Trusted_Connection=True;"
+    "Default": "Server=localhost;Port=12345;database=MyAbpDB;uid=root;pwd=root;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
